[1.0.7]
- Added Ribbon renderer and module to render nice trails after moving particles
- Added physics module to produce velocity and angle values from sum of applied forces (given mass is 1)

[1.0.6]
- Support for bezier curve logic in Beam Drawable. Adds left and right tangents.
- Sprite animations are now supported with FlipBook module
- Camera pos and zoom are now saving and loading in/from .tls file metadata
- Added fake motion blur module that calculates particle size based on how fast it moves
- Added turbulence vector field module alongside with adapters to convert from polar to cartesian and back
- Added tab so multiple projects can be worked on at once
- Now last open/save/export locations are remembered to suggest in dialog as default
- New architecture to support add-on's and multi project behavior (.tls projects now how to save and behave as well as .bvb projects)
- Added Spine animation bone attachment tool - big deal.
- Attractor module - makes particles start in one direction but then move towards attractor
- Recently Opened files menu now remembers your last open
- Open/Save/Export dialogs now remember your last choice
- Added Export As option, which means that export is a quick export to last location with Ctrl+E, while export as will ask for path
- Fixed bug with emitters not deleting properly
- Added Undo/Redo functionality using snapshot method.
- Externally changed library files are now tracked and detected and auto swapped

[1.0.5]
- legacy libGDX particle file importer full functionality
- Modules can now be renamed with double click on the title
- Full Copy/Paste functionality for modules from emitter to the emitter. Works between different Talos windows.
- Additive blend mode support in renderer and config properties for emitter
- Global dynamic user set vars (global scope input)
- Dynamic Drag point support for visualizing vector2 values in the preview window
- Filtered search drop-down for module creation